--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
                 <th><span class="sr-only">2021</span></th>
               </tr>
             </thead>
-            <tbody></tbody>
+            <tbody>
+              <tr></tr>
+            </tbody>
           </table>
           <table></table>
         </div>
